...
    }
    
    @IBAction func deleteVisitButtonTapped(_ sender: UIButton){
        
        if isWorkOrderDataExists(){
            
            AlertUtilities.showAlertMessageWithTwoActionsAndHandler("Event Delete", errorMessage: StringConstants.deleteConfirmation, errorAlertActionTitle: "Delete", errorAlertActionTitle2: "Cancel", viewControllerUsed: self, action1: {
                
                if StoreDispatcher.shared.isWorkOrderCreatedLocally(id: self.visitObject!.Id).0{
                    self.deleteLocalEventEntry()
                    self.dismiss(animated: true, completion: nil)
                }else{
                    
...
        var headerValue = ""
        if section == 0 {
            headerValue = (visitObject?.subject)!
        }else if section == 1 {
            headerValue = "Account"
        } else if section == 2 {
            headerValue = "Location"
        } else if section == 3 {
            headerValue = "Contact"
        }
        return headerValue
    }
    
...
            })
        }
    }
    
    func navigateToAccountVisitSummaryScreen() {
        DispatchQueue.main.async {
            //     AlertUtilities.showAlertMessageWithTwoActionsAndHandler("Any changes will not be saved", errorMessage: "Are you sure you want to close?", errorAlertActionTitle: "Yes", errorAlertActionTitle2: "No", viewControllerUsed: self, action1: {
            FilterMenuModel.selectedAccountId = (self.accountObject?.account_Id)!
            self.dismiss(animated: true, completion: nil)
            self.delegate?.navigateToAccountScreen()
            //  }){
            
        }
...
