...
                                <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="90" id="3ra-qs-QRH"/>
                                    <constraint firstAttribute="height" constant="38" id="sE6-sJ-yln"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="16"/>
                                <state key="normal" title="Edit">
                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="2"/>
                                    </userDefinedRuntimeAttribute>
...
                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eng-GJ-IRP">
                                                            <rect key="frame" x="19" y="80" width="1035" height="241"/>
                                                            <subviews>
                                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hzv-D0-nJ2">
                                                                    <rect key="frame" x="20" y="14" width="995" height="213"/>
                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="strategyNotes"/>
                                                                    <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="14"/>
                                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" keyboardType="alphabet"/>
                                                                    <connections>
                                                                        <outlet property="delegate" destination="NQb-oM-mOa" id="slm-MB-fxG"/>
                                                                    </connections>
                                                                </textView>
...
                                                            <color key="backgroundColor" name="Data New"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="35" id="3ao-FA-WKU"/>
                                                                <constraint firstAttribute="width" constant="120" id="iYB-Q0-65H"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="14"/>
                                                            <state key="normal" title="Save">
                                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            </state>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                                    <integer key="value" value="4"/>
                                                                </userDefinedRuntimeAttribute>
...
