//
//  AccountVisitsUITests.swift
//  SWSAppUITests
//
//  Created by Krishna, Kamya on 7/26/18.
//  Copyright © 2018 maria.min-hui.yu. All rights reserved.
//

import XCTest

class AccountVisitsUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()
        sleep(20)

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testACreateScheduleVisit1(){
        
        let app = XCUIApplication()
        app.navigationBars["SWSApp.ParentView"]/*@START_MENU_TOKEN@*/.buttons["More ..."]/*[[".staticTexts.buttons[\"More ...\"]",".buttons[\"More ...\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["  Account Visits"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"  Account Visits\"]",".staticTexts[\"  Account Visits\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        
        app.buttons["Add New  +"].tap()
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["Visit"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"Visit\"]",".staticTexts[\"Visit\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        app.buttons["Schedule and Close"].tap()
        
        let searchField = app.tables/*@START_MENU_TOKEN@*/.textFields["Search by Account Name or ID"]/*[[".cells.textFields[\"Search by Account Name or ID\"]",".textFields[\"Search by Account Name or ID\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        searchField.tap()
        searchField.typeText("Kala")
        XCUIApplication().otherElements["drop_down"].tables.staticTexts["#KALAPAKI JOE'S BILL TO#"].tap()
        
        //XCUIApplication().tables/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"11112222")/*[[".cells.containing(.button, identifier:\"Close\")",".cells.containing(.staticText, identifier:\"P.O. BOX 1231345 White River Junction, New Hampshire 96766\")",".cells.containing(.staticText, identifier:\"11112222\")"],[[[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.staticTexts["#KALAPAKI JOE'S BILL TO#"].tap()
        
        let contact = app.tables/*@START_MENU_TOKEN@*/.textFields["Search for Contacts"]/*[[".cells.textFields[\"Search for Contacts\"]",".textFields[\"Search for Contacts\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        contact.tap()
        contact.typeText("Thomas")
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["Thomas Cook"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"Thomas Cook\"]",".staticTexts[\"Thomas Cook\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        //app.tables/*@START_MENU_TOKEN@*/.staticTexts["Becky Bambara"]/*[[".cells.staticTexts[\"Becky Bambara\"]",".staticTexts[\"Becky Bambara\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.buttons["Schedule and Close"].tap()
        
        XCUIApplication().tables/*@START_MENU_TOKEN@*/.textFields["MM/DD/YYYY"]/*[[".cells.textFields[\"MM\/DD\/YYYY\"]",".textFields[\"MM\/DD\/YYYY\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.toolbars["Toolbar"].buttons["Done"].tap()
        app.buttons["Schedule and Close"].tap()
        
        app.tables/*@START_MENU_TOKEN@*/.cells.containing(.textField, identifier:"HH:MM")/*[[".cells.containing(.staticText, identifier:\"Schedule Appointment*\")",".cells.containing(.staticText, identifier:\"End Time\")",".cells.containing(.staticText, identifier:\"Start Time\")",".cells.containing(.staticText, identifier:\"Date of Visit\")",".cells.containing(.textField, identifier:\"HH:MM\")"],[[[-1,4],[-1,3],[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .textField).matching(identifier: "HH:MM").element(boundBy: 0).tap()
        app.toolbars["Toolbar"].buttons["Done"].tap()
        
        let tablesQuery = app.tables
        tablesQuery.cells.containing(.staticText, identifier:"Location").children(matching: .textField).element.tap()
        app/*@START_MENU_TOKEN@*/.buttons["Hide keyboard"]/*[[".keyboards.buttons[\"Hide keyboard\"]",".buttons[\"Hide keyboard\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        tablesQuery/*@START_MENU_TOKEN@*/.buttons["No"]/*[[".cells",".segmentedControls.buttons[\"No\"]",".buttons[\"No\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.buttons["Yes"]/*[[".cells",".segmentedControls.buttons[\"Yes\"]",".buttons[\"Yes\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.buttons["Schedule and Close"].tap()
        
        XCUIApplication().tables/*@START_MENU_TOKEN@*/.textFields["HH:MM"]/*[[".cells.textFields[\"HH:MM\"]",".textFields[\"HH:MM\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        let datePickersQuery = app.datePickers
        datePickersQuery.pickerWheels.element(boundBy: 0).adjust(toPickerWheelValue: "11")
        datePickersQuery.pickerWheels.element(boundBy: 1).adjust(toPickerWheelValue: "00")
        datePickersQuery.pickerWheels.element(boundBy: 2).adjust(toPickerWheelValue: "PM")
        app.toolbars["Toolbar"].buttons["Done"].tap()
        app.tables/*@START_MENU_TOKEN@*/.buttons["No"]/*[[".cells",".segmentedControls.buttons[\"No\"]",".buttons[\"No\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        app.buttons["Schedule and Close"].tap()
        
    }
    
    func testBNavigateToContactDetails() {
        
        let app = XCUIApplication()
        app.navigationBars["SWSApp.ParentView"]/*@START_MENU_TOKEN@*/.buttons["More ..."]/*[[".staticTexts.buttons[\"More ...\"]",".buttons[\"More ...\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["  Account Visits"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"  Account Visits\"]",".staticTexts[\"  Account Visits\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        let searchField = app.searchFields["Search"]
        searchField.tap()
        searchField.typeText("Kalap")
        
        app/*@START_MENU_TOKEN@*/.buttons["Hide keyboard"]/*[[".keyboards.buttons[\"Hide keyboard\"]",".buttons[\"Hide keyboard\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.buttons["submitButton"]/*[[".buttons[\"Submit\"]",".buttons[\"submitButton\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"#KALAPAKI JOE'S BILL TO#")/*[[".cells.containing(.staticText, identifier:\"12:26:PM\")",".cells.containing(.staticText, identifier:\"Scheduled\")",".cells.containing(.staticText, identifier:\"P.O. BOX 1231345 White River Junction, New Hampshire 96766\")",".cells.containing(.staticText, identifier:\"11112222\")",".cells.containing(.staticText, identifier:\"#KALAPAKI JOE'S BILL TO#\")"],[[[-1,4],[-1,3],[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .staticText).matching(identifier: "#KALAPAKI JOE'S BILL TO#").element(boundBy: 1).tap()
        XCUIApplication().tables/*@START_MENU_TOKEN@*/.staticTexts["Thomas Cook"]/*[[".cells.staticTexts[\"Thomas Cook\"]",".staticTexts[\"Thomas Cook\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        //tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Becky Bambara"]/*[[".cells.staticTexts[\"Becky Bambara\"]",".staticTexts[\"Becky Bambara\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
    }
    
    func testNavigateToAccountDetails() {
        
        let app = XCUIApplication()
        app.navigationBars["SWSApp.ParentView"]/*@START_MENU_TOKEN@*/.buttons["More ..."]/*[[".staticTexts.buttons[\"More ...\"]",".buttons[\"More ...\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["  Account Visits"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"  Account Visits\"]",".staticTexts[\"  Account Visits\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        let searchField = app.searchFields["Search"]
        searchField.tap()
        searchField.typeText("Kalap")
        
        app/*@START_MENU_TOKEN@*/.buttons["Hide keyboard"]/*[[".keyboards.buttons[\"Hide keyboard\"]",".buttons[\"Hide keyboard\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.buttons["submitButton"]/*[[".buttons[\"Submit\"]",".buttons[\"submitButton\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"#KALAPAKI JOE'S BILL TO#")/*[[".cells.containing(.staticText, identifier:\"12:26:PM\")",".cells.containing(.staticText, identifier:\"Scheduled\")",".cells.containing(.staticText, identifier:\"P.O. BOX 1231345 White River Junction, New Hampshire 96766\")",".cells.containing(.staticText, identifier:\"11112222\")",".cells.containing(.staticText, identifier:\"#KALAPAKI JOE'S BILL TO#\")"],[[[-1,4],[-1,3],[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .staticText).matching(identifier: "#KALAPAKI JOE'S BILL TO#").element(boundBy: 1).tap()
        app.tables.containing(.other, identifier:"Location")/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"#KALAPAKI JOE'S BILL TO#")/*[[".cells.containing(.staticText, identifier:\"P.O. BOX 1231345 White River Junction, New Hampshire 96766\")",".cells.containing(.staticText, identifier:\"11112222\")",".cells.containing(.staticText, identifier:\"#KALAPAKI JOE'S BILL TO#\")"],[[[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .button).element.tap()
        app.buttons["Details"].tap()
        
    }
    
    func testCCloseScheduledVisit() {
        
        let app = XCUIApplication()
        app.navigationBars["SWSApp.ParentView"]/*@START_MENU_TOKEN@*/.buttons["More ..."]/*[[".staticTexts.buttons[\"More ...\"]",".buttons[\"More ...\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["  Account Visits"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"  Account Visits\"]",".staticTexts[\"  Account Visits\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        let searchField = app.searchFields["Search"]
        searchField.tap()
        searchField.typeText("Kalap")
        
        app/*@START_MENU_TOKEN@*/.buttons["Hide keyboard"]/*[[".keyboards.buttons[\"Hide keyboard\"]",".buttons[\"Hide keyboard\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.buttons["submitButton"]/*[[".buttons[\"Submit\"]",".buttons[\"submitButton\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"#KALAPAKI JOE'S BILL TO#")/*[[".cells.containing(.staticText, identifier:\"12:26:PM\")",".cells.containing(.staticText, identifier:\"Scheduled\")",".cells.containing(.staticText, identifier:\"P.O. BOX 1231345 White River Junction, New Hampshire 96766\")",".cells.containing(.staticText, identifier:\"11112222\")",".cells.containing(.staticText, identifier:\"#KALAPAKI JOE'S BILL TO#\")"],[[[-1,4],[-1,3],[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .staticText).matching(identifier: "#KALAPAKI JOE'S BILL TO#").element(boundBy: 1).tap()
        XCUIApplication().buttons["Close"].tap()
        
    }
    
    //Edit account strategy and save
    func testDEditSaveStrategyForScheduledVisit() {
        
        let app = XCUIApplication()
        app.navigationBars["SWSApp.ParentView"]/*@START_MENU_TOKEN@*/.buttons["More ..."]/*[[".staticTexts.buttons[\"More ...\"]",".buttons[\"More ...\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["  Account Visits"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"  Account Visits\"]",".staticTexts[\"  Account Visits\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        let searchField = app.searchFields["Search"]
        searchField.tap()
        searchField.typeText("Kalap")
        
        app/*@START_MENU_TOKEN@*/.buttons["Hide keyboard"]/*[[".keyboards.buttons[\"Hide keyboard\"]",".buttons[\"Hide keyboard\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.buttons["submitButton"]/*[[".buttons[\"Submit\"]",".buttons[\"submitButton\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"#KALAPAKI JOE'S BILL TO#")/*[[".cells.containing(.staticText, identifier:\"12:26:PM\")",".cells.containing(.staticText, identifier:\"Scheduled\")",".cells.containing(.staticText, identifier:\"P.O. BOX 1231345 White River Junction, New Hampshire 96766\")",".cells.containing(.staticText, identifier:\"11112222\")",".cells.containing(.staticText, identifier:\"#KALAPAKI JOE'S BILL TO#\")"],[[[-1,4],[-1,3],[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .staticText).matching(identifier: "#KALAPAKI JOE'S BILL TO#").element(boundBy: 1).tap()
        
        app.buttons["Account Strategy"].tap()
        app.children(matching: .window).element(boundBy: 0).children(matching: .other).element(boundBy: 1).buttons["Edit"].tap()
        
        let collectionViewsQuery = XCUIApplication().collectionViews
        collectionViewsQuery.cells.otherElements.containing(.staticText, identifier:"Consumers Are Changing Very Little").element.tap()
        collectionViewsQuery/*@START_MENU_TOKEN@*/.staticTexts["Blaze its own path"]/*[[".cells.staticTexts[\"Blaze its own path\"]",".staticTexts[\"Blaze its own path\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        app.children(matching: .window).element(boundBy: 0).children(matching: .other).element(boundBy: 1).children(matching: .other).element(boundBy: 1).children(matching: .other).element(boundBy: 1).buttons["Close"].tap()
        app.alerts["Any changes will not be saved"].buttons["No"].tap()
        
        app.swipeUp()
        
        let respectForExpertiseElement = collectionViewsQuery.cells.otherElements.containing(.staticText, identifier:"Respect(For Expertise)").element
        respectForExpertiseElement.tap()
        respectForExpertiseElement.tap()
        let editStrategyField = collectionViewsQuery/*@START_MENU_TOKEN@*/.textViews["strategyNotes"]/*[[".cells.textViews[\"strategyNotes\"]",".textViews[\"strategyNotes\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        editStrategyField.tap()
        editStrategyField.typeText("Edited Account strategy")
        
        app/*@START_MENU_TOKEN@*/.buttons["Hide keyboard"]/*[[".keyboards.buttons[\"Hide keyboard\"]",".buttons[\"Hide keyboard\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.collectionViews/*@START_MENU_TOKEN@*/.buttons["Save"]/*[[".cells.buttons[\"Save\"]",".buttons[\"Save\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
    }
    
    //Edit account strategy and close
    func testEEditCloseStrategy() {
        
        let app = XCUIApplication()
        app.navigationBars["SWSApp.ParentView"]/*@START_MENU_TOKEN@*/.buttons["More ..."]/*[[".staticTexts.buttons[\"More ...\"]",".buttons[\"More ...\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["  Account Visits"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"  Account Visits\"]",".staticTexts[\"  Account Visits\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        let searchField = app.searchFields["Search"]
        searchField.tap()
        searchField.typeText("Kalap")
        
        app/*@START_MENU_TOKEN@*/.buttons["Hide keyboard"]/*[[".keyboards.buttons[\"Hide keyboard\"]",".buttons[\"Hide keyboard\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.buttons["submitButton"]/*[[".buttons[\"Submit\"]",".buttons[\"submitButton\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"#KALAPAKI JOE'S BILL TO#")/*[[".cells.containing(.staticText, identifier:\"12:26:PM\")",".cells.containing(.staticText, identifier:\"Scheduled\")",".cells.containing(.staticText, identifier:\"P.O. BOX 1231345 White River Junction, New Hampshire 96766\")",".cells.containing(.staticText, identifier:\"11112222\")",".cells.containing(.staticText, identifier:\"#KALAPAKI JOE'S BILL TO#\")"],[[[-1,4],[-1,3],[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .staticText).matching(identifier: "#KALAPAKI JOE'S BILL TO#").element(boundBy: 1).tap()
        
        app.buttons["Account Strategy"].tap()
        app.children(matching: .window).element(boundBy: 0).children(matching: .other).element(boundBy: 1).buttons["Edit"].tap()
        
        let collectionViewsQuery = app.collectionViews
        collectionViewsQuery.cells.otherElements.containing(.staticText, identifier:"Consumers Are Changing Very Little").element.tap()
        collectionViewsQuery/*@START_MENU_TOKEN@*/.staticTexts["Blaze its own path"]/*[[".cells.staticTexts[\"Blaze its own path\"]",".staticTexts[\"Blaze its own path\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        app.children(matching: .window).element(boundBy: 0).children(matching: .other).element(boundBy: 1).children(matching: .other).element(boundBy: 1).children(matching: .other).element(boundBy: 1).buttons["Close"].tap()
        app.alerts["Any changes will not be saved"].buttons["Yes"].tap()
        XCUIApplication().children(matching: .window).element(boundBy: 0).children(matching: .other).element(boundBy: 1).children(matching: .other).element(boundBy: 1).buttons["Close"].tap()
        
    }
    
    // Edit account strategy and cancel the changes
    func testFEditCancelStrategy() {
        
        let app = XCUIApplication()
        app.navigationBars["SWSApp.ParentView"]/*@START_MENU_TOKEN@*/.buttons["More ..."]/*[[".staticTexts.buttons[\"More ...\"]",".buttons[\"More ...\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["  Account Visits"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"  Account Visits\"]",".staticTexts[\"  Account Visits\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        let searchField = app.searchFields["Search"]
        searchField.tap()
        searchField.typeText("Kalap")
        
        app/*@START_MENU_TOKEN@*/.buttons["Hide keyboard"]/*[[".keyboards.buttons[\"Hide keyboard\"]",".buttons[\"Hide keyboard\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.buttons["submitButton"]/*[[".buttons[\"Submit\"]",".buttons[\"submitButton\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"#KALAPAKI JOE'S BILL TO#")/*[[".cells.containing(.staticText, identifier:\"12:26:PM\")",".cells.containing(.staticText, identifier:\"Scheduled\")",".cells.containing(.staticText, identifier:\"P.O. BOX 1231345 White River Junction, New Hampshire 96766\")",".cells.containing(.staticText, identifier:\"11112222\")",".cells.containing(.staticText, identifier:\"#KALAPAKI JOE'S BILL TO#\")"],[[[-1,4],[-1,3],[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .staticText).matching(identifier: "#KALAPAKI JOE'S BILL TO#").element(boundBy: 1).tap()
        
        app.buttons["Account Strategy"].tap()
        app.children(matching: .window).element(boundBy: 0).children(matching: .other).element(boundBy: 1).buttons["Edit"].tap()
        XCUIApplication().collectionViews/*@START_MENU_TOKEN@*/.staticTexts["Limited Storage Space"]/*[[".cells.staticTexts[\"Limited Storage Space\"]",".staticTexts[\"Limited Storage Space\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.swipeUp()
        
        let cancelButton = app.collectionViews/*@START_MENU_TOKEN@*/.buttons["Cancel"]/*[[".cells.buttons[\"Cancel\"]",".buttons[\"Cancel\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        cancelButton.tap()
        
        let anyChangesWillNotBeSavedAlert = app.alerts["Any changes will not be saved"]
        anyChangesWillNotBeSavedAlert.buttons["No"].tap()
        cancelButton.tap()
        anyChangesWillNotBeSavedAlert.buttons["Yes"].tap()
        
    }
    
    // Edit scheduled visit and change status to planned.
    func testGEditAndPlanVisitScheduled() {
        
        let app = XCUIApplication()
        app.navigationBars["SWSApp.ParentView"]/*@START_MENU_TOKEN@*/.buttons["More ..."]/*[[".staticTexts.buttons[\"More ...\"]",".buttons[\"More ...\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.tables.staticTexts["  Account Visits"]/*[[".otherElements[\"drop_down\"].tables",".cells.staticTexts[\"  Account Visits\"]",".staticTexts[\"  Account Visits\"]",".tables"],[[[-1,3,1],[-1,0,1]],[[-1,2],[-1,1]]],[0,0]]@END_MENU_TOKEN@*/.tap()
        
        let searchField = app.searchFields["Search"]
        searchField.tap()
        searchField.typeText("kalapa")
        
        app/*@START_MENU_TOKEN@*/.buttons["Hide keyboard"]/*[[".keyboards.buttons[\"Hide keyboard\"]",".buttons[\"Hide keyboard\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.buttons["Submit"].tap()
        XCUIApplication().tables/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"Scheduled")/*[[".cells.containing(.staticText, identifier:\"06:39:PM\")",".cells.containing(.staticText, identifier:\"Scheduled\")"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .staticText).matching(identifier: "#KALAPAKI JOE'S BILL TO#").element(boundBy: 1).tap()
        app.buttons["Edit Visit"].tap()
        
        //        XCUIApplication().children(matching: .window).element(boundBy: 0).children(matching: .other).element(boundBy: 2).tables/*@START_MENU_TOKEN@*/.cells.containing(.staticText, identifier:"#KALAPAKI JOE'S BILL TO#")/*[[".cells.containing(.staticText, identifier:\"P.O. BOX 1231345 White River Junction, New Hampshire 96766\")",".cells.containing(.staticText, identifier:\"11112222\")",".cells.containing(.staticText, identifier:\"#KALAPAKI JOE'S BILL TO#\")"],[[[-1,2],[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.buttons["Close"].tap()
        //
        //        app.tables/*@START_MENU_TOKEN@*/.textFields["Search by Account Name or ID"]/*[[".cells.textFields[\"Search by Account Name or ID\"]",".textFields[\"Search by Account Name or ID\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
